Update downloads: fix LocalMind DMG link, mark Windows & Linux as Coming Soon across all products

--- a/localmind/translations/ar.json
+++ b/localmind/translations/ar.json
@@ -173,16 +173,16 @@
     "title": "تحميل<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "متاح الآن لأنظمة macOS وWindows وLinux.",
     "macos": "macOS v1.2.3",
-    "windows": "Windows v1.2.3",
-    "linux": "Linux v1.2.3"
+    "windows": "Windows - قريبًا",
+    "linux": "Linux - قريبًا"
   },
   "download_details": {
     "macos_desc": "macOS 12 فما فوق (Intel وApple Silicon)",
     "macos_size": "حوالي 800 ميجابايت (+ 1.5 جيجابايت للنموذج عند التشغيل الأول)",
     "windows_desc": "Windows 10 فما فوق (64 بت)",
-    "windows_size": "حوالي 300 ميجابايت (+ 1.5 جيجابايت للنموذج عند التشغيل الأول)",
+    "windows_size": "قريبًا",
     "linux_desc": "Ubuntu 22.04 فما فوق / AppImage",
-    "linux_size": "حوالي 4 جيجابايت (GitHub Artifact)",
+    "linux_size": "قريبًا",
     "system_req_heading": "متطلبات النظام",
     "req_ram_label": "الذاكرة العشوائية",
     "req_ram_value": "8 جيجابايت كحد أدنى، 16 جيجابايت موصى به",
