--- a/localwrite/translations/ar.json
+++ b/localwrite/translations/ar.json
@@ -133,6 +133,12 @@
     "macos_title": "macOS v1.0.0",
     "macos_desc": "macOS 11.0+ (Apple Silicon و Intel)",
     "macos_size": "~200 ميجابايت (+ 2-6 جيجابايت لكل نموذج عند الاستخدام الأول)",
+    "windows_title": "Windows - قريبًا",
+    "windows_desc": "Windows 10 فما فوق (64 بت)",
+    "windows_size": "قريبًا",
+    "linux_title": "Linux - قريبًا",
+    "linux_desc": "Ubuntu 22.04 فما فوق / AppImage",
+    "linux_size": "قريبًا",
     "source_title": "الكود المصدري",
     "source_desc": "البناء من المصدر (Python و PyQt6)",
     "source_size": "رخصة MIT — انسخ وعدّل"
