--- a/localmind/translations/en.json
+++ b/localmind/translations/en.json
@@ -172,16 +172,16 @@
     "title": "Download<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "Available now for macOS, Windows, and Linux.",
     "macos": "macOS v1.2.3",
-    "windows": "Windows v1.2.3",
-    "linux": "Linux v1.2.3"
+    "windows": "Windows - Coming Soon",
+    "linux": "Linux - Coming Soon"
   },
   "download_details": {
     "macos_desc": "macOS 12+ (Intel & Apple Silicon)",
     "macos_size": "~800 MB (+ 1.5 GB model on first run)",
     "windows_desc": "Windows 10+ (64-bit)",
-    "windows_size": "~300 MB (+ 1.5 GB model on first run)",
+    "windows_size": "Coming Soon",
     "linux_desc": "Ubuntu 22.04+ / AppImage",
-    "linux_size": "~4 GB (GitHub Artifact)",
+    "linux_size": "Coming Soon",
     "system_req_heading": "System Requirements",
     "req_ram_label": "RAM",
     "req_ram_value": "8 GB minimum, 16 GB recommended",
