--- a/localmind/translations/fr.json
+++ b/localmind/translations/fr.json
@@ -172,16 +172,16 @@
     "title": "Télécharger<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "Disponible maintenant pour macOS, Windows et Linux.",
     "macos": "macOS v1.2.3",
-    "windows": "Windows v1.2.3",
-    "linux": "Linux v1.2.3"
+    "windows": "Windows - Bientôt disponible",
+    "linux": "Linux - Bientôt disponible"
   },
   "download_details": {
     "macos_desc": "macOS 12+ (Intel et Apple Silicon)",
     "macos_size": "~800 Mo (+ modèle de 1,5 Go au premier lancement)",
     "windows_desc": "Windows 10+ (64 bits)",
-    "windows_size": "~300 Mo (+ modèle de 1,5 Go au premier lancement)",
+    "windows_size": "Bientôt disponible",
     "linux_desc": "Ubuntu 22.04+ / AppImage",
-    "linux_size": "~4 Go (GitHub Artifact)",
+    "linux_size": "Bientôt disponible",
     "system_req_heading": "Configuration requise",
     "req_ram_label": "RAM",
     "req_ram_value": "8 Go minimum, 16 Go recommandé",
