--- a/localmind/translations/ja.json
+++ b/localmind/translations/ja.json
@@ -172,16 +172,16 @@
     "title": "ダウンロード<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "macOS、Windows、Linuxで利用可能。",
     "macos": "macOS v1.2.3",
-    "windows": "Windows v1.2.3",
-    "linux": "Linux v1.2.3"
+    "windows": "Windows - 近日公開",
+    "linux": "Linux - 近日公開"
   },
   "download_details": {
     "macos_desc": "macOS 12以降（IntelとApple Silicon）",
     "macos_size": "約800 MB（+ 初回起動時に1.5 GBモデル）",
     "windows_desc": "Windows 10以降（64ビット）",
-    "windows_size": "約300 MB（+ 初回起動時に1.5 GBモデル）",
+    "windows_size": "近日公開",
     "linux_desc": "Ubuntu 22.04以降 / AppImage",
-    "linux_size": "約4 GB（GitHub Artifact）",
+    "linux_size": "近日公開",
     "system_req_heading": "システム要件",
     "req_ram_label": "RAM",
     "req_ram_value": "最小8 GB、推奨16 GB",
