--- a/localmind/translations/ru.json
+++ b/localmind/translations/ru.json
@@ -172,16 +172,16 @@
     "title": "Скачать<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "Доступно для macOS, Windows и Linux.",
     "macos": "macOS v1.2.3",
-    "windows": "Windows v1.2.3",
-    "linux": "Linux v1.2.3"
+    "windows": "Windows - Скоро",
+    "linux": "Linux - Скоро"
   },
   "download_details": {
     "macos_desc": "macOS 12+ (Intel и Apple Silicon)",
     "macos_size": "~800 МБ (+ 1,5 ГБ модель при первом запуске)",
     "windows_desc": "Windows 10+ (64-бит)",
-    "windows_size": "~300 МБ (+ 1,5 ГБ модель при первом запуске)",
+    "windows_size": "Скоро",
     "linux_desc": "Ubuntu 22.04+ / AppImage",
-    "linux_size": "~4 ГБ (GitHub Artifact)",
+    "linux_size": "Скоро",
     "system_req_heading": "Системные требования",
     "req_ram_label": "ОЗУ",
     "req_ram_value": "Минимум 8 ГБ, рекомендуется 16 ГБ",
